fix for try-it solution icon clipping for problems with only one line of text

--- a/css/ccap-precalculus.css
+++ b/css/ccap-precalculus.css
@@ -1555,6 +1555,7 @@ div.book > div.appendix .precalculus.try > .title:not(.labeled)::before {
  ******************************************************/
 .note.precalculus.howto {
   page-break-inside: avoid;
+  min-height: 45px;
   padding-top: 0;
   margin-top: 0;
   background: url("ccap-precalculus/howto.svg") no-repeat;
@@ -1576,6 +1577,7 @@ div.book > div.appendix .precalculus.try > .title:not(.labeled)::before {
 }
 .note.precalculus.qa {
   page-break-inside: avoid;
+  min-height: 45px;
   padding-top: 0;
   margin-top: 0;
   background: url("ccap-precalculus/qa.svg") no-repeat;
@@ -1595,11 +1597,9 @@ div.book > div.appendix .precalculus.try > .title:not(.labeled)::before {
   font-size: x-small;
   color: #d7562c;
 }
-.note.precalculus.qa .body p:nth-of-type(1) {
-  margin-top: 1em;
-}
 .note.precalculus.media {
   page-break-inside: avoid;
+  min-height: 45px;
   padding-top: 0;
   margin-top: 0;
   background: url("ccap-precalculus/media.svg") no-repeat;
@@ -1628,6 +1628,7 @@ div.book > div.appendix .precalculus.try > .title:not(.labeled)::before {
 }
 .note.precalculus.try {
   page-break-inside: avoid;
+  min-height: 45px;
   padding-top: 0;
   margin-top: 0;
   background: url("ccap-precalculus/try.svg") no-repeat;
